<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:background="#32FFFF00"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_x="23dp"
            android:layout_y="127dp"
            android:text="@string/tv1"
            android:textColor="#000000"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/lv1"
            style="@android:style/Widget.Material.ListView.DropDown"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_x="23dp"
            android:layout_y="167dp" />

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewNombre"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_telefono"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:labelFor="@+id/viewTelefono"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_correo_electronico"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/viewCorreo"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#153491"
            android:text="@string/btn_guarda"
            android:textColor="#FFFFFF" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditar"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="#676662"
            android:clickable="true"
            android:src="@android:drawable/stat_notify_sync_noanim"
            app:backgroundTint="#676662" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@drawable/ic_delete"
            app:backgroundTint="#F44336" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@android:drawable/sym_call_outgoing"
            app:backgroundTint=" #1F5511" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="?attr/actionModeShareDrawable"
            app:backgroundTint="#18FFFF" />

    </LinearLayout>
    <!--
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            tools:ignore="BottomAppBar">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_edit" />

        </com.google.android.material.bottomappbar.BottomAppBar>-->
</LinearLayout>